--- a/puphpet/zkmISr/puphpet/config.yaml
+++ b/puphpet/zkmISr/puphpet/config.yaml
@@ -1,8 +1,8 @@
 vagrantfile:
     target: local
     vm:
-        box: puphpet/debian75-x64
-        box_url: puphpet/debian75-x64
+        box: puphpet/ubuntu1404-x64
+        box_url: puphpet/ubuntu1404-x64
         hostname: local.puphpet
         memory: '512'
         cpus: '1'
