--- a/puphpet/zkmISr/puphpet/config.yaml
+++ b/puphpet/zkmISr/puphpet/config.yaml
@@ -191,6 +191,7 @@ php:
         error_reporting: '-1'
         session.save_path: /var/lib/php/session
         date.timezone: UTC
+        extension: phalcon.so
     fpm_ini:
         error_log: /var/log/php-fpm.log
     fpm_pools:
